[Back] style: jdk 21 -> jdk 17